SNAP-1107 Fix contrast errors ADA

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -6,6 +6,7 @@
 
 $lightest-blue: #f5f5f5;
 $light-blue: #1ba7fa;
+$sky-blue: #40799a;
 $medium-blue: #2c7dae;
 $dark-blue: #053d53;
 
@@ -22,7 +23,7 @@ $medium-grey: #b1b1b1;
 $dark-grey-woodduck: #707070;
 $dark-grey: #767676;
 $darkest-grey: #050505;
-$transparent-black: rgba(0, 0, 0, .7);
+$transparent-black: #5c5c5c;
 
 $yellow: #e8d41c;
 $orange: #fa8d29;
@@ -50,7 +51,7 @@ $grouper: $lightest-grey;
 .c-lightest-grey {color: $lightest-grey;}
 .c-light-grey {color: $light-grey;}
 .c-medium-grey {color: $medium-grey;}
-.c-dark-grey {color: $dark-grey;}
+.c-dark-grey {color: $darkest-grey;}
 .c-darkest-grey {color: $darkest-grey;}
 
 .c-yellow {color: $yellow;}
