--- a/app/assets/stylesheets/accessibility.scss
+++ b/app/assets/stylesheets/accessibility.scss
@@ -32,7 +32,7 @@
   transition: all .2s ease-in-out;
 }
 
-.footer a,
-.footer a:visited {
+.link-color a,
+.link-color a:visited {
   color: $transparent-black;
 }
